--- a/style.css
+++ b/style.css
@@ -111,3 +111,17 @@ footer {
 .detectOnClick img {
   width: 100%;
 }
+
+.webcam{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 5px;
+  min-width: 300px;
+  width: 100%;
+  max-width: 500px;
+  height: 500px;
+  background-color: #3d3d3d57;
+ 
+}
